# base-scanner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: scan.yml
base_scanner/: __init__.py  cli.py  scanner.py
