[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "base-scanner"
version = "0.1.0"
description = "Lightweight on-chain security scanner for Base chain smart contracts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Nova" }
]
keywords = ["security", "smart-contracts", "base", "solidity", "audit", "scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.28.0",
    "web3>=6.0.0",
]

[project.scripts]
base-scanner = "base_scanner.cli:main"

[project.urls]
Homepage = "https://github.com/friendlygeorge/base-scanner"
Repository = "https://github.com/friendlygeorge/base-scanner"
Issues = "https://github.com/friendlygeorge/base-scanner/issues"

[tool.setuptools.packages.find]
include = ["base_scanner*"]
